--- a/src/app/ui/layout/header/header.component.html
+++ b/src/app/ui/layout/header/header.component.html
@@ -1,1 +1,34 @@
-<p>header works!</p>
+<div class="header-menu">
+    <div class="header">
+            <div class="logo-img">
+              <img src="assets/common/logo.png" />
+            </div>
+        <div class="search">
+            <input class="search-input" placeholder="Aradığınız ürün veya kategoriyi yazınız">
+            <i-feather name="search"></i-feather>
+        </div>
+        <div class="account-info">
+            <ul>
+                <li>
+                    <a>
+                        <i-feather name="user"></i-feather>
+                        <span>Giriş Yap</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i-feather name="heart"></i-feather>
+                        <span>Favorilerim</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i-feather name="shopping-cart"></i-feather>
+                        <span>Sepetim</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+      
+</div>
