--- a/src/app/ui/layout/layout.component.html
+++ b/src/app/ui/layout/layout.component.html
@@ -1,1 +1,13 @@
-<p>layout works!</p>
+<body>
+    <header>
+        <app-header></app-header>
+        <app-navbar></app-navbar> 
+    </header>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+    <footer>
+        <app-footer></app-footer>
+    </footer>
+</body>
+
